'Log Levels' in Gleam solved
'Resistor Color Duo' in Gleam solved