@@ -1,21 +1,17 @@
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 class ResistorColorDuo {
-    List<String> colorsList = new ArrayList<>(
-        Arrays.asList(
-            "black",
-            "brown",
-            "red",
-            "orange",
-            "yellow",
-            "green",
-            "blue",
-            "violet",
-            "grey",
-            "white"
-        )
+    List<String> colorsList = List.of(
+        "black",
+        "brown",
+        "red",
+        "orange",
+        "yellow",
+        "green",
+        "blue",
+        "violet",
+        "grey",
+        "white"
     );
 
     int value(String[] colors) {
